@@ -27,7 +27,7 @@ class UserServiceTest {
     @Test
     @DisplayName("Assign Role")
     void assignRole() {
-        boolean result = userService.assignRole(1, 100);
+        boolean result = userService.assignRole(1L, 100L);
         assertThat(result).isTrue();
     }
 
@@ -40,7 +40,7 @@ class UserServiceTest {
         List<User> users = userService.listUsers(null);
         assertThat(users).hasSize(1);
 
-        User user = users.get(0);
+        User user = users.getFirst();
         assertThat(user.getUsername()).isEqualTo("john_doe");
         assertThat(user.getIsActive()).isTrue();
 
@@ -55,7 +55,6 @@ class UserServiceTest {
 
         boolean isRegistered = userService.register("second", "dup@test.com", "pass");
 
-        System.out.println(isRegistered + " " + userService.listUsers(""));
         assertThat(isRegistered).isFalse();
         assertThat(userService.listUsers(null)).hasSize(1);
     }
@@ -69,7 +68,7 @@ class UserServiceTest {
 
         List<User> result = userService.listUsers("alice");
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getUsername()).isEqualTo("alice");
+        assertThat(result.getFirst().getUsername()).isEqualTo("alice");
 
         assertThat(userService.listUsers("zorro")).isEmpty();
     }
@@ -78,7 +77,7 @@ class UserServiceTest {
     @DisplayName("Update Profile")
     void updateProfile() {
         userService.register("temp", "temp@mail.com", "pass");
-        Integer userId = userService.listUsers(null).get(0).getId();
+        Long userId = userService.listUsers(null).getFirst().getId();
 
         userService.updateProfile(userId, "new_name", "new@mail.com");
 
@@ -91,7 +90,7 @@ class UserServiceTest {
     @DisplayName("Deactivate User")
     void deactivateUser() {
         userService.register("active_user", "email@test.com", "pass");
-        Integer userId = userService.listUsers(null).get(0).getId();
+        Long userId = userService.listUsers(null).getFirst().getId();
 
         boolean isDeactivated = userService.deactivateUser(userId);
 
@@ -103,8 +102,8 @@ class UserServiceTest {
     @DisplayName("Roles Logic: Assign and Remove")
     void rolesLogic() {
         userService.register("role_user", "role@test.com", "pass");
-        Integer userId = userService.listUsers(null).get(0).getId();
-        Integer roleId = 100;
+        Long userId = userService.listUsers(null).getFirst().getId();
+        Long roleId = 100L;
 
         boolean assigned = userService.assignRole(userId, roleId);
         assertThat(assigned).isTrue();
